--- a/package.json
+++ b/package.json
@@ -2,23 +2,27 @@
    "name": "rf-api-websocket",
    "version": "0.0.1",
    "description": "rf-api implementation for RPC over websockets using JSON messages with optional ACL",
-   "author": "Rapidfacture GmbH",
+   "author": {
+      "name": "Felix Furtmayr"
+   },
    "license": "MIT",
    "repository": {
       "type": "git",
       "url": "git@github.com:RAPIDFACTURE/rf-api-websocket.git"
    },
-   "maintainers": [{
-      "name": "felix_furtmayr",
-      "email": "ff@rapidfacture.com"
-   }],
-   "author": {
-      "name": "Felix Furtmayr"
-   },
+   "maintainers": [
+      {
+         "name": "felix_furtmayr",
+         "email": "ff@rapidfacture.com"
+      }
+   ],
    "main": "index.js",
    "dependencies": {
+      "jsonwebtoken": "^5.0.5",
+      "lodash": "^4.17.4",
       "node-cache": "4.1.1",
-      "jsonwebtoken": "^5.0.5"
+      "rf-log": "^0.1.4",
+      "ws": "^3.3.2"
    },
    "peerDependencies": {
       "rf-config": "^0.1.14",
