auto genereate docs from index.js

--- a/package.json
+++ b/package.json
@@ -17,11 +17,6 @@
       }
    ],
    "main": "index.js",
-   "scripts": {
-     "prepublish": "npm run-script doc && sh test/isRepoClean && npm test",
-     "test": "grunt",
-     "doc": "cat index.js Request.js Response.js Services.js > out.js && node_modules/mdextract/bin/mdextract out.js > README.md && rm out.js"
-   },
    "dependencies": {
       "jsonwebtoken": "^5.0.5",
       "lodash": "^4.17.4",
@@ -41,7 +36,8 @@
       "mdextract": "1.0.0"
    },
    "scripts": {
-      "prepublish": "npm test",
-      "test": "grunt"
+      "prepublish": "npm run-script doc && sh test/isRepoClean && npm test",
+      "test": "grunt",
+      "doc": "node_modules/mdextract/bin/mdextract index.js > README.md"
    }
 }
