--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "rf-config": "^0.1.14",
     "rf-log": "^0.1.4",
     "rf-load": "^0.1.10",
-    "rf-acl": "^0.1.x"
+    "rf-acl": "^0.1.13"
   },
   "devDependencies": {
     "grunt": "1.0.1",
