--- a/package.json
+++ b/package.json
@@ -18,16 +18,13 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "jsonwebtoken": "^5.0.5",
-    "lodash": "^4.17.4",
+    "jsonwebtoken": "5.0.5",
+    "lodash": "4.17.4",
     "node-cache": "4.1.1",
-    "ws": "^3.3.2"
+    "ws": "3.3.2"
   },
   "peerDependencies": {
-    "rf-config": "^0.1.14",
-    "rf-log": "^0.1.4",
-    "rf-load": "^0.1.10",
-    "rf-acl": "^0.1.13"
+    "rf-load": "^0.1.10"
   },
   "devDependencies": {
     "grunt": "1.0.1",
