--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,11 @@
     "node": true
   },
 
-  "plugins": [ ],
+  "plugins": [
+      "protractor"
+  ],
+
+  "extends": "plugin:protractor/recommended",
 
   "globals": {
     "document": false,
@@ -27,7 +31,8 @@
     "CodeMirror": true,
     "saveAs": true,
     "Blob": true,
-    "marked": true
+    "marked": true,
+    "THREE": true
   },
 
   "rules": {
@@ -56,7 +61,7 @@
     "indent": ["error", 3, { "SwitchCase": 1 }],
     "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
     "keyword-spacing": ["error", { "before": true, "after": true }],
-    "new-cap": ["error", { "newIsCap": true, "capIsNew": false }],
+    "new-cap": ["error", { "newIsCap": false, "properties": false}],
     "new-parens": "error",
     "no-array-constructor": "error",
     "no-caller": "error",
@@ -177,4 +182,3 @@
     "yoda": ["error", "never"],
   }
 }
-
